--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "expo": "~52.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-svg": "^15.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.12",
+    "@types/react-native": "^0.72.8",
+    "typescript": "^5.7.2"
   },
   "private": true
 }
