--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@react-navigation/native": "^7.0.8",
     "@react-navigation/stack": "^7.0.13",
     "expo": "~52.0.11",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.9.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "expo-router": "~4.0.9",
-    "expo-linking": "~7.0.3",
-    "expo-constants": "~17.0.3"
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.5",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
