--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.0.13",
     "@react-navigation/native": "^7.0.8",
     "@react-navigation/stack": "^7.0.13",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
@@ -22,6 +23,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.5",
@@ -29,7 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.14",
     "@types/react-native": "^0.72.8",
     "typescript": "^5.7.2"
   },
